--- a/src/ui/commandPage.html
+++ b/src/ui/commandPage.html
@@ -6,6 +6,17 @@
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<style type="text/css">
+			html, body {
+				background: linear-gradient(to bottom, #dbdcd7 0%, #dddcd7 24%, #e2c9cc 30%, #e7627d 46%, #b8235a 59%, #801357 71%, #3d1635 84%, #1c1a27 100%) no-repeat center fixed;
+				background-size: cover;
+			}
+	
+			#commandPage {
+				min-width: 100%;
+				min-height: 100%; 
+			}
+		</style>
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Roboto:100,300,400,500,700,900" rel="stylesheet">
 		<!-- Bootstrap CSS --> 
@@ -13,11 +24,7 @@
 	</head>
 
 	<body class="h-100 login">
-		<div class="h-100 d-flex flex-unwrap">
-			<div class="content h-100 w-100 d-flex">
-				<div id="commandPage"></div>
-			</div>
-		</div>
+		<div id="commandPage"></div>
 		<script src="/js/vendor.js"></script>
 		<script src="/js/commandPage.js"></script>
 	</body>
