--- a/src/ui/dashboard.html
+++ b/src/ui/dashboard.html
@@ -1,25 +1,36 @@
 <!doctype html>
-<html>
+<html id="wrarpper">
 
 	<head>
 		<title>Welcome</title>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<style type="text/css">
+			html, body {
+				background: linear-gradient(to bottom, #dbdcd7 0%, #dddcd7 24%, #e2c9cc 30%, #e7627d 46%, #b8235a 59%, #801357 71%, #3d1635 84%, #1c1a27 100%) no-repeat center fixed;
+				background-size: cover;
+			}
+	
+			#wrapper {
+				min-width: 100%;
+				min-height: 100%; 
+			}
+		</style>
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Roboto:100,300,400,500,700,900" rel="stylesheet">
 		<!-- Bootstrap CSS --> 
 		<link href="/style/vendor.css" rel="stylesheet" async>
 	</head>
 
-	<body class="h-100 login">
-		<div class="h-100 d-flex flex-unwrap">
-			<div class="content h-100 w-100 d-flex">
-				<div id="dashboard"></div>
-			</div>
-		</div>
+	<body >
+		<!--<div class="h-100 d-flex flex-unwrap">
+			<div class="content h-100 w-100 d-flex">-->
+				<div id="wrapper"></div>
+			<!----</div>
+		</div>-->
 		<script src="/js/vendor.js"></script>
-		<script src="/js/dashboard.js"></script>
+		<script id="wrapper" src="/js/dashboard.js"></script>
 	</body>
 
 </html>
